SOCIAL-4891: fixed long tags overflow issue

--- a/Website/Resources/Shared/stylesheets/dnndefault/8.0.0/default.css
+++ b/Website/Resources/Shared/stylesheets/dnndefault/8.0.0/default.css
@@ -1365,6 +1365,7 @@ div.dnnTagsInput span.tag {
     -ms-word-wrap: break-word;
     word-wrap: break-word;
     box-sizing: border-box;
+    word-break: break-word;
 }
 
     div.dnnTagsInput span.tag:hover {
